<resources>
    <string name="app_name">VoteIt!</string>
    <string name="signed_in">Signed in!</string>
    <string name="sign_in_cancelled">Sign in cancelled</string>
    <string name="sign_out">Sign Out</string>
    <string name="no_internet_connection">No internet connection</string>
    <string name="unknown_sign_in_error">Unable to sign in</string>
    <string name="title">Title</string>
    <string name="description">Description</string>
    <string name="new_survey">New Survey</string>
    <string name="end_date">End Date</string>
    <string name="end_time">End Time</string>
    <string name="create">Create</string>
    <string name="members">Members</string>
    <string name="member_email">Member email</string>
    <string name="remove_member">Remove member</string>
    <string name="invalid_email">Invalid email</string>
    <string name="required_field">Required field</string>
    <string name="clear_date">Clear date</string>
    <string name="invalid_date">Invalid date</string>
    <string name="survey_created">Survey created</string>
    <string name="vote">Vote</string>
    <string name="delete">Delete</string>
    <string name="questions">Questions</string>
    <string name="option">Option</string>
    <string name="question_title">Question title</string>
    <string name="options">Options</string>
    <string name="add_option">Add option</string>
    <string name="add_question">Add question</string>
    <string name="remove_option">Remove option</string>
    <string name="remove_question">Remove question</string>
    <string name="min_options_error_msg">There must be at least %d options</string>
    <string name="min_questions_error_msg">There must be at least %d question</string>
    <string name="min_members_error_msg">There must be at least %d member</string>
    <string name="voted">Voted</string>
    <string name="answered_label">Answered</string>
    <string name="new_survey_label">New</string>
    <string name="ended_survey_label">Ended</string>
    <string name="no_surveys_yet">No surveys yet!</string>
    <string name="create_survey">Create survey</string>
    <string name="surveys">Surveys</string>
    <string name="survey_unavailable">Survey unavailable</string>
    <string name="survey_unavailable_message">The survey you were looking for was deleted</string>
    <string name="my_surveys">My surveys</string>
    <string name="answer_all_question">You must answer all questions</string>
    <string name="failed_to_delete">Failed do delete</string>
    <string name="deleted">Deleted</string>
</resources>
