<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/end_date_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toStartOf="@+id/end_time_input_layout"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toStartOf="parent">

        <EditText
            android:id="@+id/end_date_picker"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/end_date"
            android:inputType="date"
            android:longClickable="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/end_time_input_layout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_weight="1"
        app:layout_constraintStart_toEndOf="@+id/end_date_input_layout">

        <EditText
            android:id="@+id/end_time_picker"
            style="@style/Base.Widget.AppCompat.Spinner.Underlined"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:cursorVisible="false"
            android:focusable="false"
            android:focusableInTouchMode="false"
            android:hint="@string/end_time"
            android:inputType="time"
            android:longClickable="false"
            android:textAppearance="@style/TextAppearance.AppCompat.Medium"/>
    </android.support.design.widget.TextInputLayout>

    <TextView
        android:id="@+id/clear_date"
        style="@style/FlatButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:foreground="?android:attr/selectableItemBackground"
        android:text="@string/clear_date"
        android:textAllCaps="true"
        android:visibility="invisible"
        app:layout_constraintEnd_toEndOf="@id/end_time_input_layout"
        app:layout_constraintTop_toBottomOf="@id/end_time_input_layout"
        tools:visibility="visible"/>

</android.support.constraint.ConstraintLayout>