<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto"
             xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent">

    <ScrollView
        android:id="@+id/survey_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/activity_margin"
        android:paddingTop="@dimen/activity_margin"
        android:visibility="gone"
        tools:context="com.wolfbytelab.voteit.ui.SurveyDetailActivity"
        tools:setVisibility="visible">

        <android.support.constraint.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="@dimen/activity_margin"
            android:layout_marginStart="@dimen/activity_margin">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/title_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/survey_title_max_length"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/title"
                    android:inputType="text"
                    android:maxLength="@integer/survey_title_max_length"
                    android:maxLines="1"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/description_input_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:counterEnabled="true"
                app:counterMaxLength="@integer/description_max_length"
                app:layout_constraintEnd_toEndOf="@+id/title_input_layout"
                app:layout_constraintHorizontal_weight="1"
                app:layout_constraintStart_toStartOf="@+id/title_input_layout"
                app:layout_constraintTop_toBottomOf="@+id/title_input_layout">

                <android.support.design.widget.TextInputEditText
                    android:id="@+id/description"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/description"
                    android:inputType="text"
                    android:maxLength="@integer/description_max_length"/>
            </android.support.design.widget.TextInputLayout>

            <include
                android:id="@+id/date_time_layout"
                layout="@layout/date_time_layout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/description_input_layout"/>

            <View
                android:id="@+id/focus_holder"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:focusable="true"
                android:focusableInTouchMode="true"/>

            <TextView
                android:id="@+id/members_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/members"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/date_time_layout"/>

            <android.support.v7.widget.CardView
                android:id="@+id/members_card_view"
                style="@style/CardStyle"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/members_header"
                app:layout_constraintTop_toBottomOf="@+id/members_header">

                <com.wolfbytelab.voteit.ui.editor.SectionView
                    android:id="@+id/not_editable_members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:visibility="gone"
                    app:childrenLayout="@layout/member_item"/>

                <com.wolfbytelab.voteit.ui.editor.SectionView
                    android:id="@+id/members"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:childrenLayout="@layout/member_item"/>

            </android.support.v7.widget.CardView>

            <TextView
                android:id="@+id/question_header"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                android:text="@string/questions"
                android:textAppearance="@style/Base.TextAppearance.AppCompat.Large"
                app:layout_constraintStart_toStartOf="@+id/members_card_view"
                app:layout_constraintTop_toBottomOf="@+id/members_card_view"/>

            <com.wolfbytelab.voteit.ui.editor.SectionView
                android:id="@+id/questions"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:childrenLayout="@layout/question_item"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/question_header"
                app:layout_constraintTop_toBottomOf="@+id/question_header"/>

            <TextView
                android:id="@+id/add_question"
                style="@style/FlatButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:clickable="true"
                android:focusable="true"
                android:foreground="?android:attr/selectableItemBackground"
                android:text="@string/add_question"
                android:textAllCaps="true"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@id/questions"
                app:layout_constraintTop_toBottomOf="@id/questions"
                tools:visibility="visible"/>

        </android.support.constraint.ConstraintLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        tools:setVisibility="gone"/>

</FrameLayout>